# trigger_arc_tsp

./: .clang-format  .gitignore  .pre-commit-config.yaml  LICENSE.txt  README.md  hexaly_docs.md  pyproject.toml
benchmark/: competition_solutions.csv  grasp.sh  gurobi.sh  mip_randomized_construction_bias.sh  mip_randomized_construction_random.sh  randomized_greedy.sh  simple_randomized.sh
cpp_src/: CMakeLists.txt  benchmark.sh  build.sh  build_clean.sh  clean.sh  fmt.sh  test.sh
cpp_src/bash/: solve_gurobi.sh
cpp_src/include/: grasp.hpp  instance.hpp  method.hpp  mip_randomized_construction.hpp  model.hpp  randomized_greedy.hpp  simple_randomized_construction.hpp  tsp_model.hpp
cpp_src/src/: grasp.cpp  instance.cpp  main.cpp  method.cpp  mip_randomized_construction.cpp  model.cpp  randomized_greedy.cpp  simple_randomized_construction.cpp  tsp_model.cpp
cpp_src/tests/: test_grasp.cpp  test_instance.cpp  test_mip_randomized_construction.cpp  test_model.cpp  test_randomized_greedy.cpp  test_simple_randomized_construction.cpp  test_tsp_model.cpp
cpp_src/tests/instances/: example_1.txt
latex/: why-delta-eval-not-advisable-for-tastp.md
notebooks/: dataset_exloration.ipynb  generate_instances.ipynb  milp_model.md  tables_and_figures.ipynb
py_src/trigger_arc_tsp/: __about__.py  __init__.py  gurobi_model.py  gurobi_tsp_model.py  instance.py  new_insances.ipynb  solver_model.py  tsp_search.py  utils.py
report/: preprint.sty  references.bib  report.bbl  report.blg  report.glsdefs  report.tex
report/src/: results.tex
src/trigger_arc_tsp/: __main__.py  gurobi_model.py  gurobi_tsp_model.py  hexaly_model.py  instance.py  milp_lns.py  model.md  solver_model.py  tsp_search.py  utils.py  xpress_model.py
src/trigger_arc_tsp/extra/: instance_analysis.ipynb  problem_description.md
src/trigger_arc_tsp/notebooks/: instance_analysis.ipynb
tests/: test_gurobi_model.py  test_gurobi_tsp.py  test_instance_methods.py  test_lns.py  test_mip_start.py  test_tsp_search.py  test_write_and_save_model.py  test_xpress_model.py
