[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "trigger-arc-tsp"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "jsalvasoler", email = "jsalvasoler@hotmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/jsalvasoler/trigger-arc-tsp#readme"
Issues = "https://github.com/jsalvasoler/trigger-arc-tsp/issues"
Source = "https://github.com/jsalvasoler/trigger-arc-tsp"

[tool.hatch.version]
path = "src/trigger_arc_tsp/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
  "hexaly @ https://pip.hexaly.com/simple/hexaly",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/trigger_arc_tsp tests}"

[tool.coverage.run]
source_pkgs = ["trigger_arc_tsp", "tests"]
branch = true
parallel = true
omit = [
  "src/trigger_arc_tsp/__about__.py",
]

[tool.coverage.paths]
trigger_arc_tsp = ["src/trigger_arc_tsp", "*/trigger-arc-tsp/src/trigger_arc_tsp"]
tests = ["tests", "*/trigger-arc-tsp/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
