[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "trigger-arc-tsp"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "jsalvasoler", email = "jsalvasoler@hotmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "gurobipy",
  "click",
]

[project.urls]
Documentation = "https://github.com/jsalvasoler/trigger-arc-tsp#readme"
Issues = "https://github.com/jsalvasoler/trigger-arc-tsp/issues"
Source = "https://github.com/jsalvasoler/trigger-arc-tsp"

[tool.hatch.version]
path = "src/trigger_arc_tsp/__about__.py"

[tool.hatch.envs.default]
python = "3.11"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
  "hexaly @ https://pip.hexaly.com/simple/hexaly",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/trigger_arc_tsp tests}"

[tool.hatch.envs.default.scripts]
interactive = "ipython"
trigger_arc_tsp = "python3 -m trigger_arc_tsp {args}"

[tool.coverage.run]
source_pkgs = ["trigger_arc_tsp", "tests"]
branch = true
parallel = true
omit = [
  "src/trigger_arc_tsp/__about__.py",
]

[tool.coverage.paths]
trigger_arc_tsp = ["src/trigger_arc_tsp", "*/trigger-arc-tsp/src/trigger_arc_tsp"]
tests = ["tests", "*/trigger-arc-tsp/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[tool.ruff.lint]
extend-select = [
    "I", # isort
    "F", # PyFlakes
    "E", # pycodestyle
    "ANN", # flake8-annotations
    "B", # flake8-bugbear
    "ASYNC", # flake8-async
    "UP", # pyupgrade
    "N", # pep8-naming
    "FBT", # flake8-boolean-trap
    "A", # flake8-builtins
    "C4", # flake8-comprehensions
]
ignore = [
    "T201",
    "ANN101",
    "ANN003",
    "S101",
    "N803",
    "PLR2004",
    "N806",
    "SLF001",
    "TRY003",
    "EM101",
]